# CA_Embedded

./: .clang-format  .gitattributes  .gitignore  .gitmodules  LICENSE  README.md
.NET/FFTviewer/: FFTviewer.sln
.NET/FFTviewer/FFTdrawingLib/: FFTdraw.cs  FFTdrawingLib.csproj
.NET/FFTviewer/FFTviewer/: FFTviewer.csproj  Form1.Designer.cs  Form1.cs  Program.cs
.github/workflows/: managePCBVersions.py  stm32build.yml  test.yml
STM32/AC/: .cproject  .extSettings  .mxproject  .project  AC Debug.launch  AC.ioc  Makefile  STM32F401CCUX_FLASH.ld  STM32F401CCUx_FLASH.ld  STM32F401XX_FLASH.ld  pcbversion
STM32/AC/Core/Inc/: ACBoard.h  flashHandler.h  main.h  pcbversion.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
STM32/AC/Core/Src/: ACBoard.c  ACBoard.h  flashHandler.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
STM32/AC/HeatCtrl/Inc/: HeatCtrl.h
STM32/AC/HeatCtrl/Src/: HeatCtrl.c
STM32/AC/InputValidation/Inc/: inputValidation.h
STM32/AC/InputValidation/Src/: inputValidation.c
STM32/AC/PinActuation/Inc/: pinActuation.h
STM32/AC/PinActuation/Src/: pinActuation.c
STM32/AC/USB_DEVICE/App/: usb_device.c  usbd_cdc_if.c  usbd_cdc_if.h
STM32/ACTenCh/: .extSettings  ACTenCh.ioc  Makefile
STM32/ACTenCh/Core/Inc/: ACTenCh.h  DS18B20.h  main.h  stm32f4xx_hal_conf.h
STM32/ACTenCh/Core/Src/: ACTenCh.c  DS18B20.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
STM32/ACTenCh/HeatCtrl/Inc/: HeatCtrl.h
STM32/ACTenChannel/: .extSettings  ACTenChannel.ioc  Makefile  STM32F401CCUx_FLASH.ld  STM32F401XX_FLASH.ld  stm32f401ccux_flash.ld
STM32/ACTenChannel/Core/Inc/: ACTenChannel.h  DS18B20.h  main.h  pcbversion.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
STM32/ACTenChannel/Core/Src/: ACTenChannel.c  DS18B20.c  main.c  stm32f4xx_hal_msp.c
STM32/ACTenChannel/HeatCtrl/Src/: HeatCtrl.c
STM32/ACTenChannel/USB_DEVICE/App/: usb_device.c  usbd_cdc_if.h
STM32/AirconCtrl/: .cproject  .extSettings  .project  AirconCtrl Debug.cfg  AirconCtrl.ioc  Makefile  makefile.init  pcbversion
STM32/AirconCtrl/Core/Inc/: airconCtrl.h  main.h  pcbversion.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  transmitterIR.h
STM32/AirconCtrl/Core/Src/: airconCtrl.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  transmitterIR.c
STM32/AirconCtrl/USB_DEVICE/App/: usb_device.c
STM32/AnalogInput/: .extSettings  AnalogInput.code-workspace  AnalogInput.ioc  Makefile  Pressure.ioc  STM32F401XX_FLASH.ld
STM32/AnalogInput/Core/Inc/: analog_input.h  calibration.h  main.h  (+1 more)
STM32/CommonTests/: code_generation_test.sh
STM32/Current/: .cproject  .extSettings  .project  Current.ioc  Makefile  STM32F401XX_FLASH.ld  makefile.init  stm32f401ccux_flash.ld
STM32/DC/: .cproject  .extSettings  .mxproject  .project  DC Debug.launch  DC.ioc  Makefile  makefile.init  pcbversion  stm32f401ccux_flash.ld
STM32/DC/Debug/: DC.elf  DC.list  DC.map  makefile  objects.list  sources.mk
STM32/FlowChip/: .extSettings  FlowChip.ioc  Makefile  STM32F401CCUx_FLASH.ld
STM32/Humidity/: .cproject  .extSettings  .project  Humidity.ioc  Makefile
STM32/Libraries/UnitTesting/: CMakeLists.txt
STM32/Libraries/UnitTesting/Inc/: stm32f4xx_hal.h
STM32/Libraries/UnitTesting/src/: stubs.c  stubs.cpp
STM32/LightController/: .cproject  .extSettings  .project  LightController.ioc  Makefile  STM32F401XX_FLASH.ld  pcbversion
STM32/LightController/UnitTesting/: .gitignore  CA_UnitTesting  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  makelog  makerr
STM32/LightController/UnitTesting/Src/: lightContollerTest.cpp
STM32/OTP/: .cproject  .extSettings  .project  Makefile  OTP.ioc  STM32F401CCUX_FLASH.ld  stm32f401ccux_flash.ld
STM32/OTP_F411/: Makefile  OTP_F411.ioc  stm32f411ceux_flash.ld
STM32/Pressure/: .extSettings  .project  Makefile  Pressure.ioc  STM32F401CCUx_FLASH.ld  makefile.init  pcbversion
STM32/SaltLeak/: .cproject  .extSettings  .project  Makefile  STM32F401CCUx_FLASH.ld  STM32F401XX_FLASH.ld  SaltLeak.ioc  stm32f401ccux_flash.ld
STM32/Tachometer/: .extSettings  .gitignore  Makefile  STM32F401XX_FLASH.ld  Tachometer.code-workspace  Tachometer.ioc
STM32/Temperature/: .cproject  .extSettings  .mxproject  .project  Makefile  STM32F401CCUX_FLASH.ld  STM32F401CCUx_FLASH.ld  STM32F401XX_FLASH.ld  Temperature.ioc  Temperature.launch  pcbversion
STM32/ZirconiumOxide/: .cproject  .extSettings  .project  Makefile  STM32F401CCUx_FLASH.ld  ZirconiumOxide.ioc
release_mgmt/: README.md  blobMgmt.py  blob_mgmt.py  get_staging_versions.py  managePcbVersions.py  moveStagingToStableRelease.py  naming_map  pcbVersion.py  simpleConsole.py  updatePcbVersionList.py
scripts/: blobMgmt.py  managePCBVersions.py  updatePcbVersionList.py
tests/: pcbVersionTest.py
unit_testing/: CMakeLists.txt  code_generation_test.sh  unitTests.py
unit_testing/AC/: AC_tests.cpp  CMakeLists.txt  heatCtrl_tests.cpp
unit_testing/ACTenChannel/: ACTenChannel_tests.cpp  CMakeLists.txt
unit_testing/AirconCtrl/: Aircon_tests.cpp  CMakeLists.txt
unit_testing/AnalogInput/: CMakeLists.txt  analog_calibration_tests.cpp  analog_input_tests.cpp  githash.h
unit_testing/Current/: CMakeLists.txt  current_tests.cpp
unit_testing/DC/: CMakeLists.txt  DC_tests.cpp
unit_testing/FlowChip/: CMakeLists.txt  flowchip_tests.cpp
unit_testing/Humidity/: CMakeLists.txt  humidity_tests.cpp
unit_testing/LightController/: CMakeLists.txt  LightController_tests.cpp
unit_testing/Pressure/: CMakeLists.txt  pressure_calibration_tests.cpp  pressure_tests.cpp
unit_testing/SaltLeak/: CMakeLists.txt  saltleak_tests.cpp
unit_testing/Tachometer/: CMakeLists.txt  tacho_tests.cpp
unit_testing/Temperature/: CMakeLists.txt  Temperature_tests.cpp  temperature_tests.cpp
unit_testing/ZirconiumOxide/: CMakeLists.txt  zro2_tests.cpp
unit_testing/fakes/: fake_CAProtocolStm.cpp  fake_HAL_otp.cpp  fake_StmGpio.c  fake_StmGpio.cpp  fake_StmGpio.h  fake_USBprint.cpp  fake_USBprint.h  fake_stm32xxxx_hal.cpp  fake_stm32xxxx_hal.h  fake_systemInfo.cpp
unit_testing/stubs/: stub_jumpToBootloader.cpp
util/: dfu.py  pcbversion.py  requirements.txt
(+271 files in other folders)
